Fix list actions alignment and move to CSS sprite

--- a/css/index.styl
+++ b/css/index.styl
@@ -429,20 +429,22 @@ header
 // List title
 .title
   .trash
-    background-image: url("img/trashcan.png")
+    background-image: url("img/sprite_list.png")
+    background-position: -16px 0;
 
   .email
-    margin-bottom: -2px
-    background-image: url("img/email.png")
+    background-image: url("img/sprite_list.png")
 
   .print
-    background-image: url("img/print.png")
+    background-image: url("img/sprite_list.png")
+    background-position: -48px 0;
 
   .share
     background-image: url("img/share.png")
 
   .sort
-    background-image: url("img/sort.png")
+    background-image: url("img/sprite_list.png")
+    background-position: -32px 0;
 
 
 
